--- a/machine.html
+++ b/machine.html
@@ -67,8 +67,28 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/midwkcaoesqc788akmx1eituqr'>Machine Learning Research Fellow - VSU | The Fahrenheit Group</a></h5> 
+<h5><a href='https://mlconf.com/job/oracle-redwood-city-ca-6-job-description-senior-software-development-engineer-machine-learning-oci-data-science-cloud-service-19001b4y-senior-software-development-engineer-machine-learning/'>Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://careers.unity.com/position/program-manager-machine-learning/1859735?gh_src=c7ad02fb1'>Unity Careers - Program Manager, Machine Learning, AI@Unity @ Bellevue</a></h5> 
+<p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698508701-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Oakland, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
+<p><span class="badge badge-light">Cambridge, UK</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999698380395-senior-machine-learning-engineer'>EASYRECRUE Senior Machine Learning Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/midwkcaoesqc788akmx1eituqr'>Machine Learning Research Fellow - VSU | The Fahrenheit Group</a></h5> 
+<p><span class="badge badge-light">Richmond, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698490982-machine-learning-engineer-remote'>DataFactory Machine Learning Engineer - Remote | SmartRecruiters</a></h5> 
@@ -99,7 +119,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -196,7 +216,7 @@ research?...</p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -292,7 +312,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1919695?gh_jid=1919695'>Job Application for Senior Machine Learning Optimization Engineer ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cruise/jobs/1919695?gh_jid=1919695'>Job Application for Senior Machine Learning Optimization Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
@@ -301,7 +321,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://problogger.com/jobs/job/writer-for-a-i-machine-learning-cyber-security-blogs/?utm_source=feedburner&utm_medium=twitter&utm_campaign=Feed%3A+ProBloggerJobs+%28ProBlogger+Job+Board%29'>Writer for A.I., Machine Learning &amp; Cyber Security Blogs - ProBlogger Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://problogger.com/jobs/job/writer-for-a-i-machine-learning-cyber-security-blogs/?utm_source=feedburner&utm_medium=twitter&utm_campaign=Feed%3A+ProBloggerJobs+%28ProBlogger+Job+Board%29'>Writer for A.I., Machine Learning &amp; Cyber Security Blogs - ProBlogger Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -315,7 +335,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 Machine Learning Scientists to explore and understand the latest in AI, NLP, and 
 ML;?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -366,7 +386,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -390,7 +410,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -473,31 +493,6 @@ to?...</p>
 <h5><a href='https://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-18</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002&gh_src=1a7229332'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
-Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/goodnotes/604496dd-f140-498d-901f-2ef991d8c6db?lever-origin=applied&lever-source%5B%5D=KeyValues'>GoodNotes - Senior Software Engineer, Machine Learning</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>1 day ago ... Strong fundamentals of hardware and software architecture; Strong fundamentals 
-in the mathematics behind deep learning; Love for writing efficient and?...</p>
-<hr/>
-<h5><a href='https://thirdeye.recruitee.com/o/head-of-machine-learning-infrastructure-and-operations'>Head of Machine Learning Infrastructure and Operations - ThirdEye ...</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Oct 9, 2019 ... Head of Machine Learning Infrastructure and Operations. Job description. The 
-Company. Founded in 2016, ThirdEye uses AI to automate the world's 245m?...</p>
-<hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Pennsylvania---Upper-Providence/Machine-Learning-Engineer_227836'>Machine Learning Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 4, 2019 ... The Machine Learning engineer opportunity is an exciting role that will stretch 
-your knowledge and curiosity, empower you to be creative, ambitious, & bold, 
-and?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1446347'>Job Application for Senior Machine Learning Engineer, Monetization at Reddit</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-10-17</p>
 <hr/>
 
 
