--- a/deep-learning.html
+++ b/deep-learning.html
@@ -202,7 +202,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -220,7 +220,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -228,7 +228,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -236,7 +236,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -354,7 +354,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 You have strong mathematical foundation in machine learning and deep learning
 .</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-17</p>
 <hr/>
@@ -427,7 +427,7 @@ software engineer while also allowing you to work with state-of-the-art?...</p>
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/374170F404'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Barcelona - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/374170F404'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona  Barcelona  Tallinn, Harju County, Estonia</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
@@ -452,7 +452,7 @@ from?...</p>
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills - Barcelona at Crisalix.</p>
